# dalfox

./: .gitignore  .gitmodules  .goreleaser.yml  404.html  AGENTS.md  AI.md  CHANGELOG.md  CNAME  CONTRIBUTING.md  Cargo.toml  DOM_XSS_ENHANCEMENT_SUMMARY.md  Dockerfile  Gemfile  IMPROVEMENTS.md  LICENSE.txt  MIGRATION.md  NIX.md  NOTES.md  README.md  Rakefile  SECURITY.md  codecov.yml  dalfox.go  dalfox_test.go  flake.nix  go.mod  go.sum  index.html  justfile  llms-full.txt  llms.txt  main.go  robots.txt  rss.xml  sample  sample_config.json  search.json  sitemap.xml  targets.txt
.cargo/: audit.toml
.github/: copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: anything.md  bug_report.md  feature_request.md  question.md
.github/workflows/: cd-aur.yml  cd-crates.yml  cd-dockerhub.yml  cd-ghcr.yml  cd-homebrew-tap.yml  cd-release-asset.yml  cd-release.yml  cd-release_asset.yml  cd-snapcraft.yml  cd_dockerhub.yml  cd_ghcr_publish.yml  cd_jekyll.yml  cd_snapcraft.yml  ci-contributors.yml  ci-extended.yml  ci-packaging.yml  ci-security.yml  ci.yml  ci_go.yml  codecov.yml  codeql-analysis.yml  contributors.yml  docker-image.yml  docker-publish.yml  ghcr_publish.yml  go.yml  goreleaser.yaml  goyo-update.yml  hwaro.yml  jekyll.yml  main.yml  release-binaries.yml  snap.yml  test-functional.yml  zola.yml
aur/: PKGBUILD
authors/: index.html
categories/: index.html
cmd/: args.go  custom_help.go  file.go  payload.go  pipe.go  root.go  root_test.go  server.go  sxss.go  update.go  url.go  utils.go  version.go
cmd/dalfox/: dalfox.go  run.go
core/: abstraction.go  banner.go  entity.go  logger.go  mining.go  payload-optimization.go  payload.go  scan.go  verify.go
css/: fonts.css  style.css
dalfox_rust/: Cargo.toml  NOTES.md
dalfox_rust/samples/: sample_request.txt
dalfox_rust/src/: main.rs
docs/: AGENTS.md  CNAME  Gemfile  IMPLEMENTATION_SUMMARY.md  MOCK_TEST_CASES.md  README.md  XSS_MOCK_SERVER_RESTRUCTURING.md  _config.yml  ast_dom_analysis.md  ast_integration.md  config.toml  custom_transport.md  index.html  llms-full.txt  llms.txt  sarif-output.md  style.css
docs/_advanced/: bav.md  code.md  config.md  custom-payload.md  features.md  flags.md  format-of-poc.md  github-action.md  grepping.md  ipoint.md  json.md  parameter-mining.md  remote-payloads.md  report.md  resources.md  scan-from-rawreq.md
docs/_community/: articles.md  oneliner.md  resources.md
docs/_data/: docs.yml
docs/_docs/: bav.md  code.md  config.md  custom-payload.md  flags.md  format-of-poc.md  github-action.md  grepping.md  index.md  installation.md  ipoint.md  json.md  output-handling.md  parameter-mining.md  remote-payloads.md  report.md  scan-from-rawreq.md  scan-multiple-url.md  scan-single-url.md  update.md  usage.md
docs/_get_started/: installation.md  output-handling.md  scan-multiple-url.md  scan-single-url.md  update.md  usage.md
docs/_includes/: footer.html  head_custom.html  nav_footer_custom.html  toc.md  topnav.html
docs/_plugins/: generate_llms_full.rb
docs/_tips/: cicd.md  found-action.md  oneliner.md  write-har.md
docs/archetypes/: default.md  getting-started.md
docs/assets/: 404.html  allposts.html  search.json
docs/content/: _index.md  index.ko.md  index.md
docs/data/: dalfox.json  xssmaze-score.json
docs/images/: site.webmanifest
docs/page/: installation.md  output-handling.md  overview.md  running.md  update.md  usage.md
docs/templates/: 404.html  footer.html  header.html  landing.html  page.html  section.html  sidebar.html  taxonomy.html  taxonomy_term.html
examples/: ast_dom_xss_demo.rs  config.toml  sample_request.txt  test_level1.rs
getting-started/: index.html
getting-started/configuration/: index.html
getting-started/installation/: index.html
getting-started/quick-start/: index.html
guide/: index.html
guide/output/: index.html
guide/parameters/: index.html
guide/payloads/: index.html
guide/scanning-modes/: index.html
guide/stored-xss/: index.html
guide/waf-bypass/: index.html
integrations/: index.html
integrations/caido/: index.html
integrations/mcp/: index.html
integrations/server/: index.html
integrations/skills/: index.html
internal/generating/: bulk.go  bulk_test.go
internal/har/: client_tracer.go  client_tracer_test.go  har_test.go  message_id_test.go  round_tripper.go  types.go  types_test.go
internal/optimization/: abstraction.go  abstraction_test.go  inspectionDomain.go  inspectionDomain_test.go  inspectionParam.go  json_test.go  optimization.go  optimization_test.go  replace.go  replace_test.go
internal/payload/: bav.go  bav_test.go  bulk.go  bulk_test.go  entity.go  entity_test.go  remote.go  remote_test.go  xss.go  xss_test.go
internal/printing/: banner.go  banner_test.go  codeview.go  codeview_test.go  logger.go  logger_test.go  multispin.go  multispin_test.go  poc.go  poc_test.go  scan.go  util.go  util_test.go  version.go
internal/report/: report.go  report_markdown.go  report_markdown_test.go  report_test.go
internal/tor/: embedded.go
internal/utils/: magic.go  magic_test.go  multicast.go  multicast_test.go  token.go  token_test.go  utils.go  utils_test.go
internal/verification/: verify_test.go
js/: landing.js  search.js  toc.js
ko/: index.html  rss.xml
ko/getting-started/: index.html
lib/: func.go  func_test.go  interface.go  interface_test.go
og-images/: .og_manifest.json
pkg/har/: writer.go  (+4 more)
reference/: index.html
samples/: config.toml  sample_config.json  sample_custompayload.txt  sample_found_action.sh  sample_grep.json  sample_lib.go.txt  sample_rawdata.txt  sample_request.txt  sample_target.txt  sample_targets.txt  vulnerable.js
script/: release
scripts/: check-asset-remote.rb  check-before-release.sh  version_check.cr  version_update.cr  xssmaze_score.cr
snap/: snapcraft.yaml
spec/: spec_helper.rb
src/: config.rs  lib.rs  main.rs
tags/: index.html
tests/: escaped_quote_probe_test.rs  observed_js_breakout_test.rs  remote_payload_builder_test.rs  remote_wordlist_builder_test.rs  request_count_probe.rs  scan_run_paths_test.rs  unit_tests.rs
(+515 files in other folders)
