[package]
name = "dalfox"
version = "3.0.0"
edition = "2024"
rust-version = "1.93"
authors = ["hahwul"]
description = "Dalfox is a powerful open-source XSS scanner and utility focused on automation"
license = "MIT"

[dependencies]
clap = { version = "4.0", features = ["derive", "env"] }
url = "2.0"
reqwest = { version = "0.13", default-features = false, features = [
    "rustls",
    "socks", "multipart", "json", "form", "gzip", "deflate", "brotli"
] }
scraper = "0.27"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indicatif = "0.18"
urlencoding = "2.1"
base64 = "0.22"
chrono = "0.4"
toml = "1"
axum = "0.8"
sha2 = "0.11"
hex = "0.4"
regex = "1"
rmcp = { version = "1.7.0", features = ["server", "macros"] }
schemars = { version = "1", features = ["derive"] }
oxc_parser = "0.131.0"
oxc_ast = "0.131.0"
oxc_allocator = "0.131.0"
oxc_span = "0.133.0"

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"

[package.metadata.deb]
maintainer = "hahwul <hahwul@gmail.com>"
copyright = "2024, hahwul"
license-file = "LICENSE.txt"
homepage = "https://github.com/hahwul/dalfox"
description = "Powerful open-source XSS scanner"
extended-description = """Dalfox is a powerful open-source XSS scanner and automation utility.
It supports reflected, stored, and DOM-based XSS discovery with AST-backed verification."""
depends = ["ca-certificates"]
section = "utils"
priority = "optional"
assets = [
    { source = "target/release/dalfox", dest = "/usr/bin/dalfox", mode = "755" },
]

[package.metadata.generate-rpm]
license = "MIT"
summary = "Powerful open-source XSS scanner"
group = "Applications/System"
homepage = "https://github.com/hahwul/dalfox"
description = """Dalfox is a powerful open-source XSS scanner and automation utility.
It supports reflected, stored, and DOM-based XSS discovery with AST-backed verification."""
assets = [
    { source = "target/release/dalfox", dest = "/usr/bin/dalfox", mode = "755" },
]
