[package]
name = "dalfox"
version = "3.0.2"
edition = "2024"
rust-version = "1.93"
authors = ["hahwul"]
description = "Dalfox is a powerful open-source XSS scanner and utility focused on automation"
license = "MIT"
homepage = "https://github.com/hahwul/dalfox"
repository = "https://github.com/hahwul/dalfox"

[dependencies]
clap = { version = "4.0", features = ["derive", "env"] }
url = "2.0"
reqwest = { version = "0.13", default-features = false, features = [
    "rustls-no-provider",
    "socks", "multipart", "json", "form", "gzip", "deflate", "brotli"
] }
# Pin rustls to the `ring` crypto backend instead of the default `aws-lc-rs`.
# aws-lc-sys ships C/asm that fails to link on several distros (AUR, musl,
# etc. — see #1061), whereas ring's prebuilt assembly is portable. reqwest's
# `rustls-no-provider` feature leaves the crypto provider unset, so we install
# ring's as the process default (see `dalfox::ensure_crypto_provider`).
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12", "logging"] }
scraper = "0.27"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indicatif = "0.18"
console = "0.16"
urlencoding = "2.1"
base64 = "0.22"
chrono = "0.4"
toml = "1"
axum = "0.8"
sha2 = "0.11"
hex = "0.4"
regex = "1"
rmcp = { version = "1.7.0", features = ["server", "macros"] }
schemars = { version = "1", features = ["derive"] }
oxc_parser = "0.133.0"
oxc_ast = "0.133.0"
oxc_allocator = "0.133.0"
oxc_span = "0.133.0"

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"

[package.metadata.deb]
maintainer = "hahwul <hahwul@gmail.com>"
copyright = "2024, hahwul"
license-file = "LICENSE.txt"
extended-description = """Dalfox is a powerful open-source XSS scanner and automation utility.
It supports reflected, stored, and DOM-based XSS discovery with AST-backed verification."""
depends = ["ca-certificates"]
section = "utils"
priority = "optional"
assets = [
    { source = "target/release/dalfox", dest = "/usr/bin/dalfox", mode = "755" },
]

[package.metadata.generate-rpm]
license = "MIT"
summary = "Powerful open-source XSS scanner"
group = "Applications/System"
homepage = "https://github.com/hahwul/dalfox"
description = """Dalfox is a powerful open-source XSS scanner and automation utility.
It supports reflected, stored, and DOM-based XSS discovery with AST-backed verification."""
assets = [
    { source = "target/release/dalfox", dest = "/usr/bin/dalfox", mode = "755" },
]
